--- a/homework/Day_066_HW.ipynb
+++ b/homework/Day_066_HW.ipynb
@@ -81,7 +81,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<module 'keras.backend' from '/opt/conda/lib/python3.7/site-packages/keras/backend/__init__.py'>\n"
+      "tensorflow\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
     "from keras import backend as K\n",
     "\n",
     "#檢查 backend\n",
-    "print(K)"
+    "print(K.backend())"
    ]
   },
   {
